<resources>
    <string name="app_name">ID Finder</string>
    <string name="add">Add</string>
    <string name="enter_found_id">Enter Found ID #</string>
    <string name="remove">Remove</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_lost_bu_id_number">Enter Lost BU ID Number</string>
    <string name="preferred_contact_email">Preferred Contact Email</string>
    <string name="student">Student</string>
    <string name="are_you_a_student_or_admin">Are You a Student or Admin?</string>
    <string name="admin">Admin</string>
    <string name="your_id_has_been_found_make_your_way_to_the_collection_office_at_1_street_road_to_get_it_back">Your ID has been found! Make your way to the collection office at 1 street road to get it back.</string>
    <string name="your_id_has_not_been_found_yet_sorry">Your ID has not been found, ... yet. Sorry :(</string>
    <string name="check_if_found">Check If Found</string>
</resources>