<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterID">

    <Button
        android:id="@+id/removeButton"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="@color/BUred"
        android:clickable="true"
        android:focusable="true"
        android:onClick="removeID"
        android:text="@string/remove"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identification"
        />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="411dp"
        android:layout_height="82dp"
        android:background="#971919"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/enter_found_id"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TableRow
        android:id="@+id/identification"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="460dp"
        android:background="#D3D1D1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.534">


        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:textSize="12sp"
            tools:ignore="LabelFor" />
    </TableRow>

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/BUred"
        android:text="@string/add"
        android:clickable="true"
        android:focusable="true"
        android:onClick="addID"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toStartOf="@+id/removeButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identification" />

    <ImageView
        android:id="@+id/lostID"
        android:layout_width="366dp"
        android:layout_height="343dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lost_id_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>